--- a/html1.html
+++ b/html1.html
@@ -1,10 +1,13 @@
-
+<!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="utf-8">
-<title>hello html</title>
+    <meta charset="utf-8">
+    <title>hello html</title>
 </head>
+
 <body>
-hello html! 
+    hello html!
 </body>
+
 </html>
